sizeof(RenderStyle) is 64 instead of 56 on Windows (x86) https://bugs.webkit.org/show_bug.cgi?id=74876

Reviewed by Ryosuke Niwa.

Move bit fields into a new class and use unsigned for all types so we
align at 4 byte bounds. Also move the initializers into the header
file (has the side benefit of not needing to duplicate the initializers
in 3 places).

Enable the compile assert on Windows.

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::RenderStyle):
* rendering/style/RenderStyle.h:
(WebCore::RenderStyleBitfields::affectedByUncommonAttributeSelectors):
(WebCore::RenderStyleBitfields::setAffectedByUncommonAttributeSelectors):
(WebCore::RenderStyleBitfields::unique):
(WebCore::RenderStyleBitfields::setUnique):
(WebCore::RenderStyleBitfields::affectedByEmpty):
(WebCore::RenderStyleBitfields::emptyState):
(WebCore::RenderStyleBitfields::setEmptyState):
(WebCore::RenderStyleBitfields::childrenAffectedByFirstChildRules):
(WebCore::RenderStyleBitfields::setChildrenAffectedByFirstChildRules):
(WebCore::RenderStyleBitfields::childrenAffectedByLastChildRules):
(WebCore::RenderStyleBitfields::setChildrenAffectedByLastChildRules):
(WebCore::RenderStyleBitfields::childrenAffectedByDirectAdjacentRules):
(WebCore::RenderStyleBitfields::setChildrenAffectedByDirectAdjacentRules):
(WebCore::RenderStyleBitfields::childrenAffectedByForwardPositionalRules):
(WebCore::RenderStyleBitfields::setChildrenAffectedByForwardPositionalRules):
(WebCore::RenderStyleBitfields::childrenAffectedByBackwardPositionalRules):
(WebCore::RenderStyleBitfields::setChildrenAffectedByBackwardPositionalRules):
(WebCore::RenderStyleBitfields::firstChildState):
(WebCore::RenderStyleBitfields::setFirstChildState):
(WebCore::RenderStyleBitfields::lastChildState):
(WebCore::RenderStyleBitfields::setLastChildState):
(WebCore::RenderStyleBitfields::childIndex):
(WebCore::RenderStyleBitfields::setChildIndex):
(WebCore::RenderStyleBitfields::setHasExplicitlyInheritedProperties):
(WebCore::RenderStyleBitfields::hasExplicitlyInheritedProperties):

Canonical link: https://commits.webkit.org/91712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103353 268f45cc-cd09-0410-ab3c-d52691b4dbfc