Source/WebCore/rendering/style/RenderStyle.h
@@ -124,26 +124,76 @@ class RenderStyle: public RefCounted<RenderStyle> {
     friend class RenderTreeAsText; // FIXME: Only needed so the render tree can keep lying and dump the wrong colors.  Rebaselining would allow this to be yanked.
 protected:
 
-    // The following bitfield is 32-bits long, which optimizes padding with the
-    // int refCount in the base class. Beware when adding more bits.
-    bool m_affectedByUncommonAttributeSelectors : 1;
-    bool m_unique : 1;
+    class RenderStyleBitfields {
+    public:
+        RenderStyleBitfields()
+            : m_affectedByUncommonAttributeSelectors(false)
+            , m_unique(false)
+            , m_affectedByEmpty(false)
+            , m_emptyState(false)
+            , m_childrenAffectedByFirstChildRules(false)
+            , m_childrenAffectedByLastChildRules(false)
+            , m_childrenAffectedByDirectAdjacentRules(false)
+            , m_childrenAffectedByForwardPositionalRules(false)
+            , m_childrenAffectedByBackwardPositionalRules(false)
+            , m_firstChildState(false)
+            , m_lastChildState(false)
+            , m_explicitInheritance(false)
+            , m_childIndex(0)
+        {
+        }
 
-    // Bits for dynamic child matching.
-    bool m_affectedByEmpty : 1;
-    bool m_emptyState : 1;
+        bool affectedByUncommonAttributeSelectors() const { return m_affectedByUncommonAttributeSelectors; }
+        void setAffectedByUncommonAttributeSelectors(bool value) { m_affectedByUncommonAttributeSelectors = value; }
+        bool unique() const { return m_unique; }
+        void setUnique(bool value) { m_unique = value; }
+        bool affectedByEmpty() const { return m_affectedByEmpty; }
+        void setAffectedByEmpty(bool value) { m_affectedByEmpty = value; }
+        bool emptyState() const { return m_emptyState; }
+        void setEmptyState(bool value) { m_emptyState = value; }
+        bool childrenAffectedByFirstChildRules() const { return m_childrenAffectedByFirstChildRules; }
+        void setChildrenAffectedByFirstChildRules(bool value) { m_childrenAffectedByFirstChildRules = value; }
+        bool childrenAffectedByLastChildRules() const { return m_childrenAffectedByLastChildRules; }
+        void setChildrenAffectedByLastChildRules(bool value) { m_childrenAffectedByLastChildRules = value; }
+        bool childrenAffectedByDirectAdjacentRules() const { return m_childrenAffectedByDirectAdjacentRules; }
+        void setChildrenAffectedByDirectAdjacentRules(bool value) { m_childrenAffectedByDirectAdjacentRules = value; }
+        bool childrenAffectedByForwardPositionalRules() const { return m_childrenAffectedByForwardPositionalRules; }
+        void setChildrenAffectedByForwardPositionalRules(bool value) { m_childrenAffectedByForwardPositionalRules = value; }
+        bool childrenAffectedByBackwardPositionalRules() const { return m_childrenAffectedByBackwardPositionalRules; }
+        void setChildrenAffectedByBackwardPositionalRules(bool value) { m_childrenAffectedByBackwardPositionalRules = value; }
+        bool firstChildState() const { return m_firstChildState; }
+        void setFirstChildState(bool value) { m_firstChildState = value; }
+        bool lastChildState() const { return m_lastChildState; }
+        void setLastChildState(bool value) { m_lastChildState = value; }
+        bool explicitInheritance() const { return m_explicitInheritance; }
+        void setExplicitInheritance(bool value) { m_explicitInheritance = value; }
 
-    // We optimize for :first-child and :last-child.  The other positional child selectors like nth-child or
-    // *-child-of-type, we will just give up and re-evaluate whenever children change at all.
-    bool m_childrenAffectedByFirstChildRules : 1;
-    bool m_childrenAffectedByLastChildRules : 1;
-    bool m_childrenAffectedByDirectAdjacentRules : 1;
-    bool m_childrenAffectedByForwardPositionalRules : 1;
-    bool m_childrenAffectedByBackwardPositionalRules : 1;
-    bool m_firstChildState : 1;
-    bool m_lastChildState : 1;
-    bool m_explicitInheritance : 1;
-    unsigned m_childIndex : 20; // Plenty of bits to cache an index.
+        unsigned childIndex() const { return m_childIndex; }
+        void setChildIndex(unsigned index) { m_childIndex = index; }
+
+    private:
+        // The following bitfield is 32-bits long, which optimizes padding with the
+        // int refCount in the base class. Beware when adding more bits.
+        unsigned m_affectedByUncommonAttributeSelectors : 1;
+        unsigned m_unique : 1;
+
+        // Bits for dynamic child matching.
+        unsigned m_affectedByEmpty : 1;
+        unsigned m_emptyState : 1;
+
+        // We optimize for :first-child and :last-child. The other positional child selectors like nth-child or
+        // *-child-of-type, we will just give up and re-evaluate whenever children change at all.
+        unsigned m_childrenAffectedByFirstChildRules : 1;
+        unsigned m_childrenAffectedByLastChildRules : 1;
+        unsigned m_childrenAffectedByDirectAdjacentRules : 1;
+        unsigned m_childrenAffectedByForwardPositionalRules : 1;
+        unsigned m_childrenAffectedByBackwardPositionalRules : 1;
+        unsigned m_firstChildState : 1;
+        unsigned m_lastChildState : 1;
+        unsigned m_explicitInheritance : 1;
+        unsigned m_childIndex : 20; // Plenty of bits to cache an index.
+    };
+    RenderStyleBitfields m_bitfields;
 
     // non-inherited attributes
     DataRef<StyleBoxData> m_box;
@@ -1396,38 +1446,38 @@ public:
     void setWritingMode(WritingMode v) { inherited_flags.m_writingMode = v; }
 
     // To tell if this style matched attribute selectors. This makes it impossible to share.
-    bool affectedByUncommonAttributeSelectors() const { return m_affectedByUncommonAttributeSelectors; }
-    void setAffectedByUncommonAttributeSelectors() { m_affectedByUncommonAttributeSelectors = true; }
+    bool affectedByUncommonAttributeSelectors() const { return m_bitfields.affectedByUncommonAttributeSelectors(); }
+    void setAffectedByUncommonAttributeSelectors() { m_bitfields.setAffectedByUncommonAttributeSelectors(true); }
 
-    bool unique() const { return m_unique; }
-    void setUnique() { m_unique = true; }
+    bool unique() const { return m_bitfields.unique(); }
+    void setUnique() { m_bitfields.setUnique(true); }
 
     // Methods for indicating the style is affected by dynamic updates (e.g., children changing, our position changing in our sibling list, etc.)
-    bool affectedByEmpty() const { return m_affectedByEmpty; }
-    bool emptyState() const { return m_emptyState; }
-    void setEmptyState(bool b) { m_affectedByEmpty = true; m_unique = true; m_emptyState = b; }
+    bool affectedByEmpty() const { return m_bitfields.affectedByEmpty(); }
+    bool emptyState() const { return m_bitfields.emptyState(); }
+    void setEmptyState(bool b) { m_bitfields.setAffectedByEmpty(true); m_bitfields.setUnique(true); m_bitfields.setEmptyState(b); }
     bool childrenAffectedByPositionalRules() const { return childrenAffectedByForwardPositionalRules() || childrenAffectedByBackwardPositionalRules(); }
-    bool childrenAffectedByFirstChildRules() const { return m_childrenAffectedByFirstChildRules; }
-    void setChildrenAffectedByFirstChildRules() { m_childrenAffectedByFirstChildRules = true; }
-    bool childrenAffectedByLastChildRules() const { return m_childrenAffectedByLastChildRules; }
-    void setChildrenAffectedByLastChildRules() { m_childrenAffectedByLastChildRules = true; }
-    bool childrenAffectedByDirectAdjacentRules() const { return m_childrenAffectedByDirectAdjacentRules; }
-    void setChildrenAffectedByDirectAdjacentRules() { m_childrenAffectedByDirectAdjacentRules = true; }
-    bool childrenAffectedByForwardPositionalRules() const { return m_childrenAffectedByForwardPositionalRules; }
-    void setChildrenAffectedByForwardPositionalRules() { m_childrenAffectedByForwardPositionalRules = true; }
-    bool childrenAffectedByBackwardPositionalRules() const { return m_childrenAffectedByBackwardPositionalRules; }
-    void setChildrenAffectedByBackwardPositionalRules() { m_childrenAffectedByBackwardPositionalRules = true; }
-    bool firstChildState() const { return m_firstChildState; }
-    void setFirstChildState() { m_unique = true; m_firstChildState = true; }
-    bool lastChildState() const { return m_lastChildState; }
-    void setLastChildState() { m_unique = true; m_lastChildState = true; }
-    unsigned childIndex() const { return m_childIndex; }
-    void setChildIndex(unsigned index) { m_unique = true; m_childIndex = index; }
+    bool childrenAffectedByFirstChildRules() const { return m_bitfields.childrenAffectedByFirstChildRules(); }
+    void setChildrenAffectedByFirstChildRules() { m_bitfields.setChildrenAffectedByFirstChildRules(true); }
+    bool childrenAffectedByLastChildRules() const { return m_bitfields.childrenAffectedByLastChildRules(); }
+    void setChildrenAffectedByLastChildRules() { m_bitfields.setChildrenAffectedByLastChildRules(true); }
+    bool childrenAffectedByDirectAdjacentRules() const { return m_bitfields.childrenAffectedByDirectAdjacentRules(); }
+    void setChildrenAffectedByDirectAdjacentRules() { m_bitfields.setChildrenAffectedByDirectAdjacentRules(true); }
+    bool childrenAffectedByForwardPositionalRules() const { return m_bitfields.childrenAffectedByForwardPositionalRules(); }
+    void setChildrenAffectedByForwardPositionalRules() { m_bitfields.setChildrenAffectedByForwardPositionalRules(true); }
+    bool childrenAffectedByBackwardPositionalRules() const { return m_bitfields.childrenAffectedByBackwardPositionalRules(); }
+    void setChildrenAffectedByBackwardPositionalRules() { m_bitfields.setChildrenAffectedByBackwardPositionalRules(true); }
+    bool firstChildState() const { return m_bitfields.firstChildState(); }
+    void setFirstChildState() { m_bitfields.setUnique(true); m_bitfields.setFirstChildState(true); }
+    bool lastChildState() const { return m_bitfields.lastChildState(); }
+    void setLastChildState() { m_bitfields.setUnique(true); m_bitfields.setLastChildState(true); }
+    unsigned childIndex() const { return m_bitfields.childIndex(); }
+    void setChildIndex(unsigned index) { m_bitfields.setUnique(true); m_bitfields.setChildIndex(index); }
 
     Color visitedDependentColor(int colorProperty) const;
 
-    void setHasExplicitlyInheritedProperties() { m_explicitInheritance = true; }
-    bool hasExplicitlyInheritedProperties() const { return m_explicitInheritance; }
+    void setHasExplicitlyInheritedProperties() { m_bitfields.setExplicitInheritance(true); }
+    bool hasExplicitlyInheritedProperties() const { return m_bitfields.explicitInheritance(); }
     
     // Initial values for all the properties
     static EBorderCollapse initialBorderCollapse() { return BSEPARATE; }
